--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 <body>
   <h1>Tic Tac Toe</h1>
 
+  <div class="gameboard-container">
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 
