--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <h1>Tic Tac Toe</h1>
 
   <div class="gameboard-container">
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
+    <div class="square" id="square0"></div>
+    <div class="square" id="square1"></div>
+    <div class="square" id="square2"></div>
 
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
+    <div class="square" id="square3"></div>
+    <div class="square" id="square4"></div>
+    <div class="square" id="square5"></div>
 
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
+    <div class="square" id="square6"></div>
+    <div class="square" id="square7"></div>
+    <div class="square" id="square8"></div>
   </div>
 
   <script src="script.js"></script>
