Basic functionality done

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <div class="square" id="square8"></div>
   </div>
 
+  <div class="game-result-container">
+    <p class="game-result">Test</p>
+  </div>
+
+
   <script src="script.js"></script>
 </body>
 
