Main functionality Finished - partly redone,all fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-  <div class="gameboard-container">
+  <div class="gameboard-container" id="gameboard">
     <div class="square" id="square0"></div>
     <div class="square" id="square1"></div>
     <div class="square" id="square2"></div>
